[gd_scene load_steps=42 format=3 uid="uid://c3gtq5mjxutk0"]

[ext_resource type="Script" path="res://levels/level_select/level_select.gd" id="1_1qgpx"]
[ext_resource type="Resource" uid="uid://cslvcweyejh3c" path="res://addons/sphynx_motion_blur_toolkit/pre_blur_processing/resources/default_camera_movement_component.tres" id="1_r18fv"]
[ext_resource type="Resource" uid="uid://iru8ynu04i00" path="res://addons/sphynx_motion_blur_toolkit/pre_blur_processing/resources/default_camera_rotation_component.tres" id="2_8f4l0"]
[ext_resource type="Script" path="res://game/scripts/game_level.gd" id="2_dnqch"]
[ext_resource type="Shader" path="res://levels/level_select/glow.gdshader" id="2_h5bhk"]
[ext_resource type="Resource" uid="uid://rp3mpjmisoyh" path="res://addons/sphynx_motion_blur_toolkit/pre_blur_processing/resources/default_object_movement_component.tres" id="3_jdaqf"]
[ext_resource type="Resource" uid="uid://c8ulad7utgrg7" path="res://addons/sphynx_motion_blur_toolkit/pre_blur_processing/shader_stages/pre_blur_processing_stage.tres" id="4_5nmis"]
[ext_resource type="Script" path="res://addons/sphynx_motion_blur_toolkit/pre_blur_processing/pre_blur_processor.gd" id="5_6fd1t"]
[ext_resource type="Resource" uid="uid://cng3fblx1mg7b" path="res://levels/packing/packing.tres" id="5_kl4ex"]
[ext_resource type="Resource" uid="uid://ca45noqewsyvp" path="res://addons/sphynx_motion_blur_toolkit/guertin/shader_stages/guertin_blur_stage.tres" id="6_sslls"]
[ext_resource type="Resource" uid="uid://cvb65hfs2lrxo" path="res://addons/sphynx_motion_blur_toolkit/guertin/shader_stages/guertin_neighbor_max_stage.tres" id="7_5bjva"]
[ext_resource type="Resource" uid="uid://bidsfymvdyhek" path="res://addons/sphynx_motion_blur_toolkit/guertin/shader_stages/guertin_overlay_stage.tres" id="8_5b8v4"]
[ext_resource type="Script" path="res://addons/sphynx_motion_blur_toolkit/guertin/guertin_motion_blur.gd" id="9_s43q6"]
[ext_resource type="Resource" uid="uid://dipvwksvqb3dm" path="res://addons/sphynx_motion_blur_toolkit/guertin/shader_stages/guertin_tile_max_x_stage.tres" id="10_rjonk"]
[ext_resource type="Resource" uid="uid://bxfg45ubc2pv7" path="res://addons/sphynx_motion_blur_toolkit/guertin/shader_stages/guertin_tile_max_y_stage.tres" id="11_ivh8y"]
[ext_resource type="Resource" uid="uid://bqehecsdgt70s" path="res://addons/sphynx_motion_blur_toolkit/guertin/shader_stages/guertin_tile_variance_stage.tres" id="12_t15k3"]
[ext_resource type="Script" path="res://addons/sphynx_motion_blur_toolkit/base_classes/mb_compositor.gd" id="13_g6mec"]
[ext_resource type="Texture2D" uid="uid://sv6qersy7e1x" path="res://levels/demo/resources/dust.png" id="17_xr5ka"]
[ext_resource type="Texture2D" uid="uid://bi0rwih3gy00u" path="res://levels/birthday/textures/table.png" id="19_bi0t8"]
[ext_resource type="Resource" uid="uid://bmxd1h166fskc" path="res://levels/birthday/birthday.tres" id="21_8jn8b"]
[ext_resource type="Texture2D" uid="uid://bm5cbjprj1fkh" path="res://levels/texting/textures/phone_base.png" id="22_lfffi"]
[ext_resource type="Resource" uid="uid://bcvw3yt6bxay8" path="res://levels/texting/texting.tres" id="23_1khj6"]
[ext_resource type="AudioStream" uid="uid://w6c8s5vm41r2" path="res://ui/audio/button_select.mp3" id="23_1qxve"]
[ext_resource type="AudioStream" uid="uid://d1k4mv154jf0n" path="res://ui/audio/mouse_click.mp3" id="24_4g3si"]
[ext_resource type="AudioStream" uid="uid://ydtirtnc46fm" path="res://levels/level_select/calm-6.mp3" id="25_rl4yv"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_er1tt"]

[sub_resource type="Sky" id="Sky_88vv8"]
sky_material = SubResource("ProceduralSkyMaterial_er1tt")

[sub_resource type="Environment" id="Environment_ktbl0"]
background_mode = 1
background_color = Color(0.288518, 0.288518, 0.288518, 1)
sky = SubResource("Sky_88vv8")
tonemap_mode = 2
glow_enabled = true
glow_normalized = true
glow_bloom = 0.8
glow_blend_mode = 1

[sub_resource type="CompositorEffect" id="CompositorEffect_o67md"]
resource_local_to_scene = false
resource_name = ""
enabled = false
effect_callback_type = 4
needs_motion_vectors = true
needs_normal_roughness = false
script = ExtResource("5_6fd1t")
pre_blur_processor_stage = ExtResource("4_5nmis")
camera_rotation_component = ExtResource("2_8f4l0")
camera_movement_component = ExtResource("1_r18fv")
object_movement_component = ExtResource("3_jdaqf")
debug = false
shader_stages/pre_blur_processor_stage = ExtResource("4_5nmis")

[sub_resource type="CompositorEffect" id="CompositorEffect_i1gg6"]
resource_local_to_scene = false
resource_name = ""
enabled = false
effect_callback_type = 4
needs_motion_vectors = true
needs_normal_roughness = false
script = ExtResource("9_s43q6")
blur_stage = ExtResource("6_sslls")
overlay_stage = ExtResource("8_5b8v4")
tile_max_x_stage = ExtResource("10_rjonk")
tile_max_y_stage = ExtResource("11_ivh8y")
neighbor_max_stage = ExtResource("7_5bjva")
tile_variance_stage = ExtResource("12_t15k3")
tile_size = 40
linear_falloff_slope = 1.0
importance_bias = 40.0
maximum_jitter_value = 0.95
minimum_user_threshold = 1.5
debug = false
shader_stages/blur_stage = ExtResource("6_sslls")
shader_stages/overlay_stage = ExtResource("8_5b8v4")
shader_stages/tile_max_x_stage = ExtResource("10_rjonk")
shader_stages/tile_max_y_stage = ExtResource("11_ivh8y")
shader_stages/neighbor_max_stage = ExtResource("7_5bjva")
shader_stages/tile_variance_stage = ExtResource("12_t15k3")

[sub_resource type="Compositor" id="Compositor_k3f24"]
compositor_effects = Array[CompositorEffect]([SubResource("CompositorEffect_o67md"), SubResource("CompositorEffect_i1gg6")])
script = ExtResource("13_g6mec")
samples = 16
intensity = 1.0
center_fade = 0.0
framerate_independent = true
uncapped_independence = false
target_constant_framerate = 30.0

[sub_resource type="QuadMesh" id="QuadMesh_u78mf"]
size = Vector2(100, 100)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3g02s"]
render_priority = 0
shader = ExtResource("2_h5bhk")

[sub_resource type="Curve" id="Curve_3lf0q"]
_data = [Vector2(1e-05, 0), 0.0, 0.0, 0, 0, Vector2(0.245136, 1), 0.0, 0.0, 0, 0, Vector2(0.536965, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_6x1du"]
curve = SubResource("Curve_3lf0q")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_cg1eb"]
emission_shape = 3
emission_box_extents = Vector3(4, 4, 2)
angle_min = 1.07288e-05
angle_max = 180.0
radial_velocity_min = -0.0500223
radial_velocity_max = 0.0499776
gravity = Vector3(0, 0, 0)
color = Color(1, 1, 1, 0.643)
alpha_curve = SubResource("CurveTexture_6x1du")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vhluw"]
transparency = 1
vertex_color_use_as_albedo = true
albedo_color = Color(0.998, 0.823, 0.678, 0.421)
albedo_texture = ExtResource("17_xr5ka")

[sub_resource type="QuadMesh" id="QuadMesh_hp4hm"]
material = SubResource("StandardMaterial3D_vhluw")
size = Vector2(0.05, 0.05)

[sub_resource type="Skin" id="Skin_m422k"]

[sub_resource type="BoxShape3D" id="BoxShape3D_tx1vj"]
size = Vector3(1.075, 0.707, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_8qych"]
radius = 65.52

[node name="LevelSelect" type="Node3D"]
script = ExtResource("1_1qgpx")
levels = Array[ExtResource("2_dnqch")]([ExtResource("21_8jn8b"), ExtResource("23_1khj6"), ExtResource("5_kl4ex")])
previews = Array[Texture2D]([ExtResource("19_bi0t8"), ExtResource("22_lfffi"), ExtResource("22_lfffi")])
beatmap_indices = Array[int]([0, 0, 0])

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ktbl0")
compositor = SubResource("Compositor_k3f24")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.895282)
fov = 45.0

[node name="Background" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5)
cast_shadow = 0
gi_mode = 0
mesh = SubResource("QuadMesh_u78mf")
surface_material_override/0 = SubResource("ShaderMaterial_3g02s")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.30097)
cast_shadow = 0
amount = 256
lifetime = 5.0
preprocess = 5.0
randomness = 0.5
visibility_aabb = AABB(-4, -4, -1, 8, 8, 2)
process_material = SubResource("ParticleProcessMaterial_cg1eb")
draw_pass_1 = SubResource("QuadMesh_hp4hm")
draw_skin = SubResource("Skin_m422k")

[node name="LevelSelectButton" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.667)

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelSelectButton"]
shape = SubResource("BoxShape3D_tx1vj")

[node name="FilmReelSegments" type="Node3D" parent="."]
transform = Transform3D(0.99994, 0, 7.69397e-17, 0, 1, 0, -7.69397e-17, 0, 0.99994, 0, 0, -0.667)

[node name="UI" type="CanvasLayer" parent="."]

[node name="ArrowUp" type="Label" parent="UI"]
self_modulate = Color(1, 1, 1, 0.125)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 316.71
offset_top = 46.305
offset_right = 382.71
offset_bottom = 138.43
grow_horizontal = 2
rotation = -1.5708
scale = Vector2(0.5, 1)
theme_override_font_sizes/font_size = 45
text = "âž¤"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpButton" type="Area2D" parent="UI/ArrowUp"]
position = Vector2(124.61, -10.7098)
rotation = 1.5708
scale = Vector2(1, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/ArrowUp/UpButton"]
position = Vector2(52.5, 54)
shape = SubResource("CircleShape2D_8qych")

[node name="ArrowDown" type="Label" parent="UI"]
self_modulate = Color(1, 1, 1, 0.5)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 410.0
offset_top = -50.0
offset_right = 476.0
offset_bottom = 42.125
grow_horizontal = 2
grow_vertical = 0
rotation = 1.5708
scale = Vector2(0.5, 1)
theme_override_font_sizes/font_size = 45
text = "âž¤"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DownButton" type="Area2D" parent="UI/ArrowDown"]
position = Vector2(-91.9993, 104)
rotation = -1.5708
scale = Vector2(1, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/ArrowDown/DownButton"]
position = Vector2(52.5, 54)
shape = SubResource("CircleShape2D_8qych")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_1qxve")
volume_db = -20.0
pitch_scale = 2.0
max_polyphony = 2

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_4g3si")
volume_db = -20.0
pitch_scale = 0.75
max_polyphony = 10

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_rl4yv")
volume_db = -5.0
autoplay = true

[connection signal="input_event" from="UI/ArrowUp/UpButton" to="." method="_on_up_button_input_event"]
[connection signal="input_event" from="UI/ArrowDown/DownButton" to="." method="_on_down_button_input_event"]
